<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>info.bonjean</groupId>
	<artifactId>beluga-player</artifactId>
	<version>0.14</version>
	<name>Beluga Player</name>
	<description>Beluga Player</description>
	<url>http://jbonjean.github.io/beluga-player/</url>
	<developers>
		<developer>
			<id>jbonjean</id>
			<name>Julien Bonjean</name>
			<email>julien@bonjean.info</email>
		</developer>
	</developers>

	<prerequisites>
		<maven>3.0.5</maven>
	</prerequisites>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<slf4j.version>1.7.32</slf4j.version>
		<log4j.version>2.14.1</log4j.version>
		<dnsjava.version>3.4.2</dnsjava.version>
		<twinkle.version>1.0.1</twinkle.version>
		<gson.version>2.8.8</gson.version>
		<httpclient.version>4.5.13</httpclient.version>
		<commons-io.version>2.11.0</commons-io.version>
		<commons-lang.version>3.12.0</commons-lang.version>
		<pivot.version>2.0.5</pivot.version>
		<lastfm-java.version>0.1.2</lastfm-java.version>
		<jlayer.version>1.0.1.4</jlayer.version>
		<svg-salamander.version>1.1.2</svg-salamander.version>
		<!-- JAADEC build from  dieterstueken / JAADec (87fcec667e7ea17dea869627432f2a07f418914f) -->
		<jaad.version>0.8.6-SNAPSHOT</jaad.version>
		<jdeb-plugin.version>1.8</jdeb-plugin.version>
		<jakarta-xml-bind.version>3.0.1</jakarta-xml-bind.version>
		<maven-artifact.version>3.8.2</maven-artifact.version>
		<maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
		<maven-shade-plugin.log4j2-cachefile-transformer.version>2.14.1</maven-shade-plugin.log4j2-cachefile-transformer.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven-shade-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<filters>
						<filter>
							<artifact>com.googlecode.soundlibs:jlayer</artifact>
							<excludes>
								<exclude>javazoom/jl/decoder/Bitstream.class</exclude>
							</excludes>
						</filter>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<!-- https://issues.apache.org/jira/browse/LOG4J2-673 -->
						<transformer implementation="com.github.edwgiz.maven_shade_plugin.log4j2_cache_transformer.PluginsCacheFileTransformer" />
					</transformers>
					<outputFile>dist/${project.artifactId}-${project.version}.jar</outputFile>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.github.edwgiz</groupId>
						<artifactId>maven-shade-plugin.log4j2-cachefile-transformer</artifactId>
						<version>${maven-shade-plugin.log4j2-cachefile-transformer.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<inherited>true</inherited>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>info.bonjean.beluga.Main</mainClass>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>jdeb</artifactId>
				<groupId>org.vafer</groupId>
				<version>${jdeb-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jdeb</goal>
						</goals>
						<configuration>
							<deb>dist/${project.artifactId}_${project.version}_all.deb</deb>
							<dataSet>
								<data>
									<src>dist/${project.build.finalName}.jar</src>
									<type>file</type>
									<mapper>
										<type>perm</type>
										<prefix>/usr/share/beluga-player</prefix>
									</mapper>
								</data>
								<data>
									<src>src/deb/copyright</src>
									<type>file</type>
									<mapper>
										<type>perm</type>
										<prefix>/usr/share/doc/beluga-player</prefix>
									</mapper>
								</data>
								<data>
									<src>src/deb/beluga-player</src>
									<type>file</type>
									<mapper>
										<type>perm</type>
										<prefix>/usr/bin</prefix>
										<filemode>755</filemode>
									</mapper>
								</data>
								<data>
									<type>link</type>
									<linkName>/usr/share/beluga-player/beluga-player.jar</linkName>
									<linkTarget>/usr/share/beluga-player/${project.artifactId}-${project.version}.jar</linkTarget>
									<symlink>true</symlink>
								</data>
								<data>
									<src>src/main/resources/img/beluga-player.svg</src>
									<dst>beluga-player.svg</dst>
									<type>file</type>
									<mapper>
										<type>perm</type>
										<prefix>/usr/share/beluga-player/images</prefix>
									</mapper>
								</data>
								<data>
									<src>src/deb/beluga-player.desktop</src>
									<type>file</type>
									<mapper>
										<type>perm</type>
										<prefix>/usr/share/applications</prefix>
									</mapper>
								</data>
							</dataSet>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>de.u-mass</groupId>
			<artifactId>lastfm-java</artifactId>
			<version>${lastfm-java.version}</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.soundlibs</groupId>
			<artifactId>jlayer</artifactId>
			<version>${jlayer.version}</version>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.pivot</groupId>
			<artifactId>pivot-core</artifactId>
			<version>${pivot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.pivot</groupId>
			<artifactId>pivot-wtk</artifactId>
			<version>${pivot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.pivot</groupId>
			<artifactId>pivot-wtk-terra</artifactId>
			<version>${pivot.version}</version>
		</dependency>
		<dependency>
			<groupId>com.kitfox</groupId>
			<artifactId>svgSalamander</artifactId>
			<version>${svg-salamander.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang.version}</version>
		</dependency>
		<dependency>
			<groupId>dnsjava</groupId>
			<artifactId>dnsjava</artifactId>
			<version>${dnsjava.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.swingfx</groupId>
			<artifactId>twinkle</artifactId>
			<version>${twinkle.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${httpclient.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>
		<!-- AAC support, custom version built from https://github.com/dieterstueken/JAADec -->
		<dependency>
			<groupId>net.sourceforge.jaadec</groupId>
			<artifactId>jaad</artifactId>
			<version>${jaad.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>${maven-artifact.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>${jakarta-xml-bind.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.nashorn</groupId>
			<artifactId>nashorn-core</artifactId>
			<version>15.3</version>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>jbonjean-github</id>
			<url>https://github.com/jbonjean/maven-repository/raw/master</url>
		</repository>
	</repositories>
</project>
